--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/4geeks.ico" />
+  <link rel="icon" type="image/svg+xml" href="/checklist.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
-  <title>Hello Rigo with Vanilla.js</title>
+  <title>MissionList</title>
 </head>
 
 <body>
